[package]
name = "log_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.7"
chrono = "0.4"
clap = "4.1" # untuk parsing CLI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hapus atau komentar bagian [lib] dan tambahkan [bin]
[[bin]]
name = "log_analyzer"
path = "src/main.rs"